add email error validation

--- a/target-app/Resources/Localization/Localizable.strings
+++ b/target-app/Resources/Localization/Localizable.strings
@@ -25,5 +25,5 @@
 "signup_gender_placeholder" = "SELECT YOUR GENDER";
 
 // MARK: SIGN UP ERROR
-"signup_name_label_error" = "You forgot to put your name!";
-
+"signup_name_label_error" = "you forgot to put your name!";
+"signup_email_label_error" = "oops! this email is not valid";
