--- a/target-app/Resources/Localization/Localizable.strings
+++ b/target-app/Resources/Localization/Localizable.strings
@@ -28,3 +28,4 @@
 "signup_name_label_error" = "you forgot to put your name!";
 "signup_email_label_error" = "oops! this email is not valid";
 "signup_email_password_error" = "the password must be 6 characters long";
+"signup_email_password_confirmation_error" = "passwords don’t match";
