add setup navigation bar in home screen

--- a/target-app/Resources/Localization/Localizable.strings
+++ b/target-app/Resources/Localization/Localizable.strings
@@ -34,3 +34,5 @@
 // MARK: SIGN IN ERROR
 "signin_error" = "This email and password don’t match";
 
+// MARK: HOME SCREEN
+"home_title" = "Target Points";
